--- a/application/src/main/resources/static/js/react-client/src/Pages/Contact/style.module.scss
+++ b/application/src/main/resources/static/js/react-client/src/Pages/Contact/style.module.scss
@@ -5,6 +5,8 @@
     text-align: center;
     width: 100%;
     height: 100%;
+    padding-top: 100px;
+    padding-bottom: 200px;
     background-color: #FF9838;
   
 }
