--- a/application/src/main/resources/static/js/react-client/src/Pages/Date-Page/style.module.scss
+++ b/application/src/main/resources/static/js/react-client/src/Pages/Date-Page/style.module.scss
@@ -1,6 +1,7 @@
 .datePage {
     width: 100%;
     height: 100%;
+    padding-top: 100px;
 }
 
 .dateSpacer {
