--- a/application/src/main/resources/static/js/react-client/src/Pages/Home-Page/style.module.scss
+++ b/application/src/main/resources/static/js/react-client/src/Pages/Home-Page/style.module.scss
@@ -14,7 +14,7 @@
 }
 
 .homeContainer {
-    padding-top: 100px;
+    padding-top: 150px;
 }
 
 .homeHeroH1 {
