--- a/application/src/main/resources/static/js/react-client/src/Pages/Journal-Page/style.module.scss
+++ b/application/src/main/resources/static/js/react-client/src/Pages/Journal-Page/style.module.scss
@@ -1,6 +1,7 @@
 .journalPage {
     width: 85%;
     margin: 0px auto;
+    padding-top: 100px;
     border-left: 1px solid rgba(0,0,0,0.1);
     border-right: 1px solid rgba(0,0,0,0.1);
     border-bottom: 1px solid rgba(0,0,0,0.1);
